--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     ]
   },
   "dependencies": {
+    "@babylonjs/core": "^4.2.0",
     "antd": "^4.12.3",
-    "babylonjs": "^4.2.0",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
