--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "homepage": "https://madnessianin.github.io/3D_Modeling_On_BabylonJS/",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "cross-env NODE_ENV=development webpack"
+    "dev": "cross-env NODE_ENV=development webpack",
+    "predeploy": "npm run dev",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "browserslist": "> 0.25%, not dead",
@@ -30,6 +33,7 @@
     "css-loader": "^5.1.0",
     "eslint": "^7.21.0",
     "eslint-loader": "^4.0.2",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.2.0",
     "install": "^0.13.0",
     "less": "^4.1.1",
